# my-pocket-guide

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
core/: CMakeLists.txt
core/include/core_module/: core.hpp  core_utils.hpp
core/src/core_module/: core.cpp
data/configs/: base_config.json
database/: CMakeLists.txt
database/include/database_module/: database.hpp  database_utils.hpp
database/src/: main.cpp
database/src/database_module/: database.cpp
docs/: Doxyfile
scripts/: run_core_tests.sh  run_database_tests.sh
server/: CMakeLists.txt
server/include/server/: server.hpp  server_utils.hpp
server/src/: main.cpp
server/src/server/: server.cpp
swagger-ui/: index.html  swagger.yaml
tests/: CMakeLists.txt
tests/core_tests/: CMakeLists.txt  core_tests.cpp
tests/database_tests/: CMakeLists.txt  database_tests.cpp
utils/: CMakeLists.txt  config.hpp  logger.hpp
